# notification-service-api

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  Pipfile  README.md  azure-pipelines-build-master.yml  azure-pipelines-build-release.yml  azure-pipelines-notification-service-api-release.yml  azure-pipelines-notification-service-api-review.yml  azure-pipelines-notification-service-api-test.yml  compose.yml  docker-compose.env.example  docker-compose.env.yaml.example  docker-compose.yml  docker-entrypoint.sh  manage.py  openapi.yaml  pyproject.toml  release-please-config.json  requirements-dev.in  requirements-dev.txt  requirements-prod.in  requirements-prod.txt  requirements.in  requirements.txt  setup.cfg  sonar-project.properties
.github/: dependabot.yml
.prod/: on_deploy.sh  uwsgi.ini
api/: admin.py  const.py  factories.py  models.py  serializers.py  signals.py  types.py  urls.py  utils.py  views.py
audit_log/: README.md  admin.py  enums.py  exceptions.py  managers.py  middleware.py  models.py  serializers.py  services.py  settings.py  types.py  utils.py  views.py
common/: factories.py  models.py  utils.py
custom_health_checks/: README.md  apps.py  backends.py  views.py
docs/: development-without-docker.md
keycloak/: docker-compose.keycloak.env.yaml  realm.json
notification_service/: constants.py  cors_utils.py  settings.py  urls.py  wsgi.py
pipelines/: notification-service-api-dev.yml  notification-service-api-release.yml  notification-service-api-review.yml
(+48 files in other folders)
